tích hợp thanh toán

--- a/public/profile.html
+++ b/public/profile.html
@@ -21,10 +21,10 @@
 
       <div class="menu">
         <div class="menu-title">Menu</div>
-        <a class="menu-item" href="dashboard.html">🏠 Dashboard</a>
-        <a class="menu-item" href="documents.html">📄 Tài liệu</a>
-        <a class="menu-item active" href="profile.html">👤 Trang cá nhân</a>
-        <a class="menu-item" href="payment.html">⭐ Nâng cấp</a>
+        <a class="menu-item" href="dashboard.html">Dashboard</a>
+        <a class="menu-item" href="documents.html">Tài liệu</a>
+        <a class="menu-item active" href="profile.html">Trang cá nhân</a>
+        <a class="menu-item" href="payment.html">Nâng cấp</a>
       </div>
     </aside>
 
@@ -32,11 +32,6 @@
     <div class="main">
       <header class="topbar">
         <div class="topbar-inner">
-          <div class="search">
-            <span class="hint">🔎 Tìm kiếm (UI)</span>
-            <input placeholder="Nhập từ khóa..." />
-          </div>
-
           <div class="topbar-right">
             <div class="user-chip">
               <span class="user-dot"></span>
@@ -54,7 +49,7 @@
         <div class="card">
           <div class="card-header">
             <div>
-              <h2 class="card-title">👤 Thông Tin Cá Nhân</h2>
+              <h2 class="card-title">Thông Tin Cá Nhân</h2>
               <p class="card-subtitle">Thông tin tài khoản của bạn</p>
             </div>
           </div>
@@ -81,7 +76,7 @@
         <div class="card">
           <div class="card-header">
             <div>
-              <h2 class="card-title">📦 Thông Tin Gói</h2>
+              <h2 class="card-title">Thông Tin Gói</h2>
               <p class="card-subtitle">Theo dõi quota và nâng cấp khi cần</p>
             </div>
           </div>
@@ -119,7 +114,7 @@
             </div>
 
             <button onclick="window.location.href='payment.html'" class="btn btn-warning" id="upgradeBtn" style="margin-top: 14px; width: 100%; padding: 14px; font-size: 1.05rem;">
-              ⭐ Nâng Cấp Premium Ngay
+              Nâng Cấp Premium Ngay
             </button>
           </div>
         </div>
@@ -128,7 +123,7 @@
         <div class="card">
           <div class="card-header">
             <div>
-              <h2 class="card-title">📄 Tài Liệu Của Tôi</h2>
+              <h2 class="card-title">Tài Liệu Của Tôi</h2>
               <p class="card-subtitle">Danh sách tài liệu bạn đã upload</p>
             </div>
           </div>
