--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -21,10 +21,10 @@
 
       <div class="menu">
         <div class="menu-title">Menu</div>
-        <a class="menu-item active" href="dashboard.html">🏠 Dashboard</a>
-        <a class="menu-item" href="documents.html">📄 Tài liệu</a>
-        <a class="menu-item" href="profile.html">👤 Trang cá nhân</a>
-        <a class="menu-item" href="payment.html">⭐ Nâng cấp</a>
+        <a class="menu-item active" href="dashboard.html">Dashboard</a>
+        <a class="menu-item" href="documents.html"> Tài liệu</a>
+        <a class="menu-item" href="profile.html">Trang cá nhân</a>
+        <a class="menu-item" href="payment.html">Nâng cấp</a>
       </div>
     </aside>
 
@@ -33,11 +33,6 @@
       <!-- TOPBAR -->
       <header class="topbar">
         <div class="topbar-inner">
-          <div class="search" aria-label="Search (UI only)">
-            <span class="hint">🔎 Tìm kiếm (UI)</span>
-            <input placeholder="Nhập từ khóa..." />
-          </div>
-
           <div class="topbar-right">
             <div class="user-chip">
               <span class="user-dot"></span>
@@ -53,13 +48,13 @@
         <!-- Actions -->
         <div class="grid-3" style="margin-bottom:14px;">
           <button onclick="window.location.href='documents.html'" class="btn btn-secondary">
-            📄 Xem Tài Liệu
+            Xem Tài Liệu
           </button>
           <button onclick="window.location.href='profile.html'" class="btn btn-warning">
-            👤 Trang Cá Nhân
+            Trang Cá Nhân
           </button>
           <button onclick="window.location.href='payment.html'" class="btn btn-success">
-            ⭐ Nâng Cấp Gói
+            Nâng Cấp Gói
           </button>
         </div>
 
@@ -102,7 +97,7 @@
             <div class="form-group">
               <label>File (PDF hoặc DOC, tối đa 10MB)</label>
               <div class="file-input-wrapper">
-                <input type="file" id="docFile" accept=".pdf,.doc,.docx" onchange="updateFileName()" required>
+                <input type="file" id="docFile" accept="*" onchange="updateFileName()" required>
                 <label for="docFile" class="file-input-label">Nhấn để chọn file</label>
               </div>
               <div class="file-name" id="fileName"></div>
