--- a/public/documents.html
+++ b/public/documents.html
@@ -21,10 +21,10 @@
 
       <div class="menu">
         <div class="menu-title">Menu</div>
-        <a class="menu-item" href="dashboard.html">🏠 Dashboard</a>
-        <a class="menu-item active" href="documents.html">📄 Tài liệu</a>
-        <a class="menu-item" href="profile.html">👤 Trang cá nhân</a>
-        <a class="menu-item" href="payment.html">⭐ Nâng cấp</a>
+        <a class="menu-item" href="dashboard.html">Dashboard</a>
+        <a class="menu-item active" href="documents.html">Tài liệu</a>
+        <a class="menu-item" href="profile.html">Trang cá nhân</a>
+        <a class="menu-item" href="payment.html">Nâng cấp</a>
       </div>
     </aside>
 
@@ -32,11 +32,6 @@
     <div class="main">
       <header class="topbar">
         <div class="topbar-inner">
-          <div class="search">
-            <span class="hint">🔎 Tìm kiếm (UI)</span>
-            <input placeholder="Nhập từ khóa..." />
-          </div>
-
           <div class="topbar-right">
             <div class="user-chip">
               <span class="user-dot"></span>
@@ -53,7 +48,7 @@
         <div class="card">
           <div class="card-header">
             <div>
-              <h2 class="card-title">📄 Danh Sách Tất Cả Tài Liệu</h2>
+              <h2 class="card-title">Danh Sách Tất Cả Tài Liệu</h2>
               <p class="card-subtitle">Xem và tải về tài liệu từ cộng đồng</p>
             </div>
           </div>
